# youtube-manager

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  auth.py  config.py  main.py  persona.py  pyproject.toml
backend/db/: schema.sql
backend/migrations/: 001_add_conversation_mode.sql  002_clips_tables.sql
backend/routes/: assets.py  chat.py  clips.py  conversations.py  memories.py  personas.py
backend/services/: conversation_title.py  guardian.py  image_compositor.py  intent_router.py  llm.py  memory_extractor.py  nano_banana.py  photo_indexer.py  photo_search.py  reference_analyzer.py  script_pipeline.py  supabase_pool.py  thumbnail_graph.py  thumbnail_memory.py  thumbnail_nodes.py  thumbnail_pipeline.py  thumbnail_state.py
backend/tests/: conftest.py  test_asset_cache_lru.py  test_assets.py  test_auth.py  test_chat.py  test_clips_cleanup.py  test_clips_download.py  test_clips_face_detection.py  test_clips_job_runner.py  test_clips_metadata.py  test_clips_render_final.py  test_clips_render_preview.py  test_clips_routes.py  test_clips_segment.py  test_clips_sse_broker.py  test_clips_storage.py  test_clips_transcript.py  test_config.py  test_conversation_title.py  test_conversations.py  test_guardian.py  test_image_compositor.py  test_intent_router.py  test_intent_router_extended.py  test_llm.py  test_main.py  test_memories_route.py  test_memory_extractor.py  test_nano_banana.py  test_parallel_io.py  test_persona.py  test_personas_route.py  test_photo_indexer.py  test_photo_indexing_rate_limit.py  test_photo_search.py  (+8 more)
(+74 files in other folders)
