[project]
name = "youtube-manager-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyjwt[crypto]>=2.8.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.92.0",
    "voyageai>=0.3.7",
    "pillow>=12.2.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
